refactor: RagService,EmbeddingService 역할 리팩토링
* EmbeddingService 에서 임베딩값을 LectureRepository에 저장하던 구조 -> 벡터스토어에 저장하도록 변경

* RagService 에서는 유사도검색만 실행되도록 변경

* Lecture 앤티티 임베딩필드 삭제